fixed menu bar alignment & logo

--- a/static/style.css
+++ b/static/style.css
@@ -9,9 +9,9 @@ body		{
 		}
 #content p 	{text-align:justify; padding-bottom:.5em;}
 a		{outline: none; color:black;}
-.tabactive a {color:#990000;}
-.menuitem a:hover {color:#990000;}
-.tabactive a:hover {color:#990000;}
+.tabactive a {color:#ffffff;}
+.menuitem a:hover {color:#990000; background:#808080;}
+.tabactive a:hover {color:#ffffff; background:transparent;}
 img	{border: 0px;}
 #payload-layout	{
   min-width:74.5em;
@@ -58,7 +58,7 @@ img	{border: 0px;}
 	z-index:40;
 	/*top:82px;*/
 	/*top:7px; */
-	top:7px;
+	top:85px;
 	right:1em;
 	width:158px;
 	height:158px;
@@ -94,18 +94,17 @@ img	{border: 0px;}
 		position:relative;
 	  z-index:50;
 		overflow:hidden;
-    width:63em;  /* 9em * 7entries */
 		font-size: 14px;
-		margin:1em auto 0px auto;
+		margin:1em 164px 0px 45px;
 		border-top: 1px solid #202020;
 		border-bottom: 1px solid #202020;
 		}
 #mainmenu a	{text-decoration:none;}
 div.menuitem 	{
 		float:left;
-    width: 8em; height: 19px;
+    width: 7.5em; height: 1.3em;
 		text-align: center;
-		padding: .75em .5em;
+		padding: .75em .25em;
 		margin:0;
 	  font-weight: bold;
 		}
@@ -246,7 +245,7 @@ div.huge {
 	padding-top:5px;
 }
 div.huge a {text-decoration:none; color:#F0E0E0;}
-div.huge a:hover {color:#003366;}
+div.huge a:hover {color:#000000;}
 
 table.ptb		{
 			border-bottom:1px solid #000000;
